--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
     "@qdrant/js-client-rest": "^1.4.0",
     "@xenova/transformers": "^2.14.0",
     "@zilliz/milvus2-sdk-node": "^2.3.5",
+    "apache-arrow": "^15.0.0",
     "archiver": "^5.3.1",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
@@ -78,7 +79,7 @@
     "url-pattern": "^1.0.3",
     "uuid": "^9.0.0",
     "uuid-apikey": "^1.5.3",
-    "vectordb": "0.4.11",
+    "vectordb": "0.5.0",
     "weaviate-ts-client": "^1.4.0"
   },
   "devDependencies": {
